@startuml Mapa

class Player {
    +void draw(window)
    +void moveUp()
    +void moveDown()
    +void moveLeft()
    +void moveRight()
    +void evaluate(event)
    -int fila
    -int columna
    -SpriteManager sprite
}

class Mapa {
    +void draw(window)
    -static int dimension
    -SpriteManager sprite
}

class Celda {
    +void draw(window)
    -int fila
    -int columna
    -SpriteManager sprite
}

class Item {
    +void draw(window)
    -int fila
    -int columna
    -SpriteManager sprite
}

class Roca {
    +void move()
}

Player --> EstadoInicial
Player --> Mapa
main --> Mapa
main --> Player

Mapa *--> "6x6" Celda
Celda o--> "0..n" Item
Item <|-- Pared
Item <|-- Roca

Mapa --> EstadoInicial
Estado <|-- EstadoInicial
Estado <|-- EstadoFinal

@enduml